Oprettet Vaccine-Class for Client SIde. Oprettet properties og Override String, samt lavet constructor.

--- a/Vaccine App/Vaccine App.csproj
+++ b/Vaccine App/Vaccine App.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Model\Account.cs" />
     <Compile Include="Model\Kalender.cs" />
     <Compile Include="Model\Registrering.cs" />
+    <Compile Include="Model\Vaccine.cs" />
     <Compile Include="Model\VaccinePlan.cs" />
     <Compile Include="Persistency\PersistencyService.cs" />
     <Compile Include="Model\VaccineSingleton.cs" />
